--- a/oneR.ipynb
+++ b/oneR.ipynb
@@ -62,9 +62,6 @@
     "# orignal minus eroded\n",
     "img = img - gray_im\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "plt.subplot(111),plt.imshow(img_orignal, cmap = 'gray')\n",
     "plt.title('I-1 '), plt.xticks([]), plt.yticks([])\n",
     "plt.show()\n",
@@ -113,6 +110,69 @@
     "plt.subplot(111),plt.imshow(cimg, cmap = 'gray')\n",
     "plt.title('I-1 '), plt.xticks([]), plt.yticks([])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2 \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Read\n",
+    "gray_im = cv2.imread('three.png')\n",
+    "gray_im = cv2.cvtColor(gray_im, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "# Noise removing \n",
+    "gray_im = cv2.medianBlur(gray_im,5)\n",
+    "    \n",
+    "\n",
+    "# Binary\n",
+    "thresh = 127\n",
+    "gray_im = cv2.threshold(gray_im, thresh, 255, cv2.THRESH_BINARY)[1]\n",
+    "\n",
+    "cv2.imwrite('Binary.png', gray_im)\n",
+    "img  = gray_im\n",
+    "img_orignal  = gray_im\n",
+    "\n",
+    "# Erosion\n",
+    "kernel = np.ones((5,5),np.uint8)\n",
+    "gray_im = cv2.erode(gray_im,kernel,iterations = 10)\n",
+    "    \n",
+    "\n",
+    "# binary - eroded     \n",
+    "img = img - gray_im\n",
+    "# Dilation \n",
+    "kernel1 = np.ones((3,3),np.uint8)\n",
+    "#img = cv2.dilate(img,kernel1,iterations = 1)\n",
+    "fig = plt.figure()\n",
+    "a = fig.add_subplot(1, 3, 1)\n",
+    "imgplot = plt.imshow(img_orignal, cmap = 'gray')\n",
+    "a.set_title('img_orignal')\n",
+    "\n",
+    "a = fig.add_subplot(1, 3, 2)\n",
+    "imgplot = plt.imshow(gray_im, cmap = 'gray')\n",
+    "imgplot.set_clim(0.0, 0.7)\n",
+    "a.set_title('Intermediat')\n",
+    "\n",
+    "a = fig.add_subplot(1, 3, 3)\n",
+    "imgplot = plt.imshow(img, cmap = 'gray')\n",
+    "a.set_title('Final')\n",
+    "cv2.imwrite('Final131.png', img)"
    ]
   },
   {
