--- a/Codes/six.ipynb
+++ b/Codes/six.ipynb
@@ -335,31 +335,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "am Bates\n",
+      "\n",
+      "TEN REASONS\n",
+      "\n",
+      "WE'RE WRONG ABUUI\n",
+      "IHE WORLD — AND WHY\n",
+      "THINGS ARE BEUEH\n",
+      "\n",
+      "IHAN YUU THINK\n",
+      "\n",
+      "' 'th ’Ola Bosling and\n",
+      "Halls BOSIIIIQ :lua ﬂosling Bi‘mnlum\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tesserocr\n",
+    "from PIL import Image\n",
+    "image = Image.open('six.jpg')\n",
+    "print(tesserocr.image_to_text(image))  # print ocr text from image"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     \n",
+      "\n",
+      "wseaamnmnurmoammmumumwyh\n",
+      "\n",
+      "lndtal Bangladesh. Bhutan. Pm. NON. 36 L8“ and In W.\n",
+      "Cuwlaﬂon 01 Hm edition out“ of m m 6| WW.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tesserocr\n",
+    "from PIL import Image\n",
+    "image = Image.open('one.jpg')\n",
+    "print(tesserocr.image_to_text(image))  # print ocr text from image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# using Canny edge detctor "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tesserocr\n",
+    "from PIL import Image\n",
+    "image = Image.open('Images/Canny_im_at_Morph_copy.jpg')\n",
+    "print(tesserocr.image_to_text(image))  # print ocr text from image"
+   ]
   },
   {
    "cell_type": "code",
